<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmartTaxi</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_splash">Smart Taxi</string>
    <string name="title_activity_forget_password">Smart Taxi > Forget password</string>
    <string name="label_forget_password_header">Forgot your password?</string>
    <string name="label_forget_password_body_text">Enter your registered email address and we will send you your password recovery instructions.</string>
    <string name="button_recover_password">Send instructions</string>
    <string name="button_update_profile">Save profile</string>
    <string name="button_update_tip">Update tip</string>
    <string name="label_email_address_hint">Email address...</string>
    <string name="label_change_photo">Change profile picture</string>
    <string name="label_first_name">First name:</string>
    <string name="label_last_name">Last name:</string>
    <string name="label_gender">Gender:</string>
    <string name="label_phone">Phone:</string>
    <string name="label_password_old">Old password:</string>
    <string name="label_password_new">New password:</string>
    <string name="label_password_retype">Retype password:</string>
    <string name="label_edit_tip_heading">Select your desired tip option:</string>
    <string name="label_confirm_trip">Confirm trip</string>
    <string name="button_update_password">Update password</string>
    <string name="title_activity_profile_view">Smart Taxi > My Profile</string>
    <string name="button_edit_my_profile">Edit my profile</string>
    <string name="button_edit_my_tip">Change tip preferances</string>
    <string name="button_edit_my_card">Manage payment options</string>
    <string name="button_edit_my_password">Change my password</string>
    <string name="title_activity_edit_profile">Smart Taxi > Edit Profile</string>
    <string name="title_activity_change_password">Smart Taxi > Change Password</string>
    <string name="title_activity_change_tip">Smart Taxi > Change Tip</string>
    <string name="title_activity_confirm_trip">Smart Taxi > Confirm Trip</string>
    <string name="label_pickup_address">Pickup address:</string>
    <string name="label_dummy_address">333 Bay St. Toronto, ON, Canada M1N 1H3 333 Bay St. Toronto, ON, Canada M1N 1H3</string>
    <string name="label_no_of_people">No. of people:</string>
    <string name="label_no_of_bags">No. of bags:</string>
    <string name="label_child_seats">Child seats:</string>
    <string name="label_drivers_details">Driver\'s details</string>
    <string name="label_dummy_date">Mon. Feb 18th, 2014, 5:55 PM</string>
    <string name="label_eta">ETA:</string>
    <string name="label_misc_details">Misc. details</string>
    <string name="label_fluffy_text">some dumy text spanning like three to four lines full of fluffy text that is not only meaningless but also boring.some dumy text spanning like three to four lines full of fluffy text that is not only meaningless but also boring.</string>
    <string name="label_confirm_trip_request">Confirm trip request</string>
    <string name="title_activity_custom_pickup_address">Custom Pickup Address</string>
    <string name="label_refine_your_pickup_location">Refine your pickup location:</string>
    <string name="title_activity_pickup_location">Pickup Location</string>
    <string name="title_activity_qrscanner">QRScannerActivity</string>
    <string name="title_activity_maploader">MapLoader</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="btn_label_pickmeup">Pick me up</string>
    <string name="label_findaride">Find a Ride</string>
    <string name="button_label_reset">Reset</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_testing">TestingActivity</string>
    <string name="label_btn_options">Options</string>
    <string name="label_fare">Fare</string>
    <string name="title_activity_trip_history">Trip history</string>
    <string name="label_tip">Tip</string>
    <string name="label_total">Total</string>
    <string name="title_activity_container">Smart Taxi</string>

    <string-array name="navigation_labels_for_corporate">
        <item>Find a ride</item>
        <item>Upcoming trips</item>
        <item>Trip history</item>
        <item>Profile</item>
        <item>Barcode</item>
        <item>Change tip</item>
        <item>Logout</item>
    </string-array>
    <string-array name="navigation_labels_for_customers">
        <item>Find a ride</item>
        <item>Upcoming trips</item>
        <item>Trip history</item>
        <item>Profile</item>
        <item>Cards</item>
        <item>Change tip</item>
        <item>Logout</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="label_enter_pin">Enter your pin...</string>
    <string name="hint_pin_goes_here">Pin goes here...</string>
    <string name="label_message_for_driver_optional">Message for driver (optional):</string>
    <string name="label_select_trip_type">Select trip type:</string>
    <string name="label_spinner_select_trip_type">Select trip type...</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered (regId = %1$s)!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="title_activity_invoice">Trip invoice</string>
    <string name="title_activity_barcode">BarcodeActivity</string>
    <string name="label_enter_file_number_here">Enter file number here:</string>
    <string name="label_enter_your_file_number_here">Enter your file number here...</string>
    <string name="label_enter_message_for_driver_here">Enter message for driver here...</string>
    <string name="title_activity_post_fblogin">PostFBLoginActivity</string>
    <string name="title_activity_sign_up">Register</string>
    <string name="button_create_account">Create account</string>
    <string name="hint_first_name_">First name...</string>
    <string name="hint_last_name">Last name...</string>
    <string name="hint_email_username">Email (username)</string>
    <string name="hint_password">Password...</string>
    <string name="hint_phone_number">Phone number...</string>
    <string name="button_login_using_facrbook">Login using Facebook</string>
    <string name="title_activity_verify_account_activuty">Verify Account</string>
    <string name="label_verify_account_desc">You will receive a verification code on the email address you registered with. Please enter that code in the field below to verify your account.</string>
    <string name="button_verify_account">Verify account</string>
    <string name="title_activity_list_cards">Payment options</string>
    <string name="title_activity_add_cards">Add a card</string>
    <string name="label_card_title">Card title</string>
    <string name="label_card_number">Card number</string>
    <string name="label_expiry">Expiry</string>
    <string name="label_security_code">Security code</string>
    <string name="hint_title_on_card">Name on card...</string>
    <string name="hint_credict_card_number">Credict card number...</string>
    <string name="hint_ccv">CCV</string>
    <string name="hint_yy">YY</string>
    <string name="hint_mm">MM</string>
    <string name="btn_add_card">Add card</string>
    <string name="desc_card_type_icon">Card type icon</string>
    <string name="desc_delete_card_button">Delete card button</string>
    <string name="label_trip_details">TRIP DETAILS</string>
    <string name="label_driver_s_details">DRIVER\'S DETAILS</string>
    <string name="label_payment_details">PAYMENT DETAILS</string>
    <string name="btn_confirm_booking">CONFIRM BOOKING</string>
    <string name="label_promo_code">Promo code...</string>
    <string name="btn_forget_password">Forget password?</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="hint_username">Email address...</string>

</resources>
