<LinearLayout
    android:id="@+id/dialoguePinJourney"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="left|top"
    android:background="#aaaaaa"
    android:orientation="vertical"
    android:padding="10dp">
    <com.smart.taxi.components.CFTextView
         android:id="@+id/labelEnterPin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="left"
         android:textSize="14sp"
         android:singleLine="true"
         style="@style/FormLabels"
         android:text="@string/label_enter_pin" />
    <com.smart.taxi.components.CFEditText 
        android:id="@+id/txtPin"
        android:singleLine="true"
        android:inputType="textPassword|textWebPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/FormTextInputStyleInvert"
        android:hint="@string/hint_pin_goes_here"/>
    <com.smart.taxi.components.CFTextView
         android:id="@+id/labelEnterMessage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="left"
         android:textSize="14sp"
         android:layout_marginTop="10dp"
         android:singleLine="true"
         style="@style/FormLabels"
         android:text="@string/label_message_for_driver_optional" />
     <com.smart.taxi.components.CFEditText 
        android:id="@+id/txtMessageForDriver"
        android:singleLine="false"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/FormTextInputStyleInvert"
        android:hint="@string/label_enter_message_for_driver_here"/>
     <com.smart.taxi.components.CFTextView
         android:id="@+id/labelSelectJourneyType"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="left"
         android:textSize="14sp"
         android:layout_marginTop="10dp"
         android:singleLine="true"
         style="@style/FormLabels"
         android:text="@string/label_select_trip_type" />
     <Spinner
         android:id="@+id/spinnerJourneyType"
         android:layout_width="match_parent"
         android:prompt="@string/label_spinner_select_trip_type"
         android:layout_height="wrap_content"
          />
     <LinearLayout 
         android:id="@+id/llFileNumberBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:visibility="invisible"
         android:layout_marginTop="5dp"
         >
         <com.smart.taxi.components.CFTextView
	         android:id="@+id/labelEnterFileNumber"
	         android:layout_width="fill_parent"
	         android:layout_height="wrap_content"
	         android:layout_gravity="left"
	         android:textSize="14sp"
	         android:singleLine="true"
	         style="@style/FormLabels"
	         android:text="@string/label_enter_file_number_here" />
         <com.smart.taxi.components.CFEditText 
	        android:id="@+id/txtFileNumber"
	        android:singleLine="false"
	        android:inputType="text"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        style="@style/FormTextInputStyleInvert"
	        android:hint="@string/label_enter_your_file_number_here"/>
     </LinearLayout>

</LinearLayout>