<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/bg_yellow"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    tools:context=".ForgetPasswordActivity" >

    <com.smart.taxi.components.CFTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_forget_password_header"
        android:textSize="24sp" />

    <com.smart.taxi.components.CFTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="@string/label_forget_password_body_text" />

    <com.smart.taxi.components.CFEditText
        android:id="@+id/txtForgetPasswordEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="30dp"
        style="@style/FormTextInputStyle"
        android:hint="@string/label_email_address_hint"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </com.smart.taxi.components.CFEditText>

    <Button
        android:id="@+id/btnForgetPasswordSend"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="#4d4d4d"
        android:textColor="#ffffff"
        android:text="@string/button_recover_password" />

</LinearLayout>
